Fixed z-index interactivity issue of components with particles. Fixed console issue of missing logos in manifest.json.

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,3 +1,5 @@
 .tilt {
     background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%);
+    position: absolute;
+    z-index: 1;
 }
